Workload_Generator/sample-deployment-resources/app4/app4-m1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a4m1
  labels:
    app: a4m1
spec:
  containers:
  - name: a4m1
    image: samodha/dummy-microservice:a4m1
    resources:
      requests:
        cpu: "100m"
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
