Workload_Generator/sample-deployment-resources/app4/app4-m2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a4m2
  labels:
    app: a4m2
spec:
  containers:
  - name: a4m2
    image: samodha/dummy-microservice:a4m2
    resources:
      requests:
        cpu: "100m"
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
