Workload_Generator/sample-deployment-resources/app4/app4-m3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a4m3
  labels:
    app: a4m3
spec:
  containers:
  - name: a4m3
    image: samodha/dummy-microservice:a4m3
    resources:
      requests:
        cpu: "100m"
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
