Workload_Generator/sample-deployment-resources/app4/app4-m6.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a4m6
  labels:
    app: a4m6
spec:
  containers:
  - name: a4m6
    image: samodha/dummy-microservice:a4m6
    resources:
      requests:
        cpu: "100m"
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
