Workload_Generator/sample-deployment-resources/app4/app4-m1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a4m1
  labels:
    app: a4m1
    service: a4m1
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a4m1
