Workload_Generator/sample-deployment-resources/app4/app4-m2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a4m2
  labels:
    app: a4m2
    service: a4m2
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a4m2
