Workload_Generator/sample-deployment-resources/app4/app4-m51-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a4m51
  labels:
    app: a4m51
    service: a4m51
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a4m51
