Workload_Generator/sample-deployment-resources/app4/app4-m52-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a4m52
  labels:
    app: a4m52
    service: a4m52
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a4m52
